hphp/hack/test/typecheck/is_expression/trait.php.exp
File "trait.php", line 6, characters 16-19:
TFoo is uninstantiable (Typing[4002])
File "trait.php", line 3, characters 7-10:
Declaration is here
